--- a/guides/getting-started/setup-installation.mdx
+++ b/guides/getting-started/setup-installation.mdx
@@ -1,187 +1,248 @@
 ---
-title: "Setup and Installation"
-description: "Learn how to install GoogleTest and GoogleMock in your C++ project, set up your build configuration using common tools (CMake, Bazel), and verify the environment is correctly established for testing."
+title: "Installation and Environment Setup"
+description: "A practical guide to installing GoogleTest and GoogleMock, including environment preparation, build integration (CMake/Bazel), and basic project configuration. Perfect for new users looking to quickly start writing and running tests."
 ---
 
-# Setup and Installation
+# Installation and Environment Setup
 
 ## Overview
-This guide helps you quickly install and integrate GoogleTest and GoogleMock into your C++ project. You'll learn how to set up your build environment using common tools like CMake and Bazel, configure your build files to include the testing frameworks, and verify that your environment is ready to write and run tests.
-
-## Prerequisites
-- A working C++17 capable compiler (GCC, Clang, MSVC minimum versions can be found in the official [System Requirements & Supported Platforms](https://github.com/google/googletest/blob/main/docs/prerequisites-installation-setup/system-requirements-supported-platforms.mdx))
-- CMake (minimum version 3.14 recommended for recent GoogleTest fetch content support)
-- Bazel if you prefer Bazel-based builds
-- Basic familiarity with C++ project build configuration
-
-## What You Will Achieve
-- Clone and build GoogleTest and GoogleMock
-- Incorporate the testing libraries into your build system
-- Build your first simple test executable
-- Run and validate the test binary
-
-## Time Estimate
-Expect to spend about 15-30 minutes on this setup flow depending on your environment and experience with build tools.
-
-## Difficulty Level
-Beginner to Intermediate — Suitable for developers new to GoogleTest and GoogleMock or those integrating them into existing projects.
+This guide helps you quickly install and set up GoogleTest and GoogleMock in your development environment. It covers environment prerequisites, multiple build system options (CMake and Bazel), and basic project configuration to get you started writing and running tests immediately.
 
 ---
 
-## Step-by-Step Instructions
+## 1. Workflow Overview
 
-### 1. Clone the GoogleTest Repository
+### What You Will Accomplish
+- Prepare your system with all necessary dependencies.
+- Build GoogleTest/GoogleMock from source or integrate them into your existing project.
+- Configure your project to compile and link tests with GoogleTest.
+- Run your first test executable to validate installation.
 
-To get the latest stable release with GoogleMock included, clone the repository:
+### Prerequisites
+- A supported OS: Linux, Windows, or macOS.
+- A compiler supporting C++17 standard.
+- Build tools:
+  - For CMake-based projects: CMake 3.14 or later.
+  - For Bazel: Bazel build tool.
+- Git client (optional, to clone the repository).
+
+### Expected Outcome
+- GoogleTest and GoogleMock libraries are built and installed.
+- Your test project is successfully configured to compile and link tests using GoogleTest.
+- Running the test executable will execute all defined tests using GoogleTest's harness.
+
+### Time Estimate
+Approximately 15-30 minutes depending on environment and build system familiarity.
+
+### Difficulty Level
+Beginner to Intermediate
+
+---
+
+## 2. Step-by-Step Setup Instructions
+
+### Step 1: Clone the GoogleTest Repository (Optional)
+If you do not have the source code locally, clone the repository at the desired release tag.
 
 ```bash
- git clone https://github.com/google/googletest.git
- cd googletest
+# Clone the latest stable release
+$ git clone https://github.com/google/googletest.git -b v1.17.0
+$ cd googletest
 ```
 
-This contains both GoogleTest and GoogleMock.
+### Step 2: Building GoogleTest Standalone Using CMake
+GoogleTest provides a standalone CMake project to build and install its libraries.
 
-### 2. Build GoogleTest and GoogleMock Standalone with CMake
-
-Create a build directory and generate native build files:
-
+<Steps>
+<Step title="Create a build directory and navigate into it">
+Run these commands:
 ```bash
 mkdir build
 cd build
-cmake ..
 ```
-
-- This generates build scripts for your platform (Makefiles on Linux/macOS, Visual Studio solution files on Windows).
-- To build only GoogleTest without GoogleMock, run: 
-
+</Step>
+<Step title="Configure the project">
+Configure the build using CMake, optionally disabling GoogleMock:
 ```bash
+cmake ..  # To build both GoogleTest and GoogleMock
+# Or, to build only GoogleTest:
 cmake .. -DBUILD_GMOCK=OFF
 ```
-
-Build the libraries and install (requires admin privileges):
-
+</Step>
+<Step title="Build the project">
+On Linux/macOS, simply run:
 ```bash
 make
-sudo make install
 ```
-
-On Windows, open the generated `.sln` file in Visual Studio and build.
-
-### 3. Integrate GoogleTest/GoogleMock into Your Project Using CMake
-
-The recommended method is to include the libraries as dependencies in your `CMakeLists.txt`. You can either:
-
-- Use `find_package` after installation:
-
-```cmake
-find_package(GTest REQUIRED)
-target_link_libraries(your_test_target PRIVATE GTest::gtest GTest::gmock)
-```
-
-- Or build GoogleTest as part of your project via `FetchContent` (requires CMake 3.14+):
-
-```cmake
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/refs/tags/release-1.17.0.zip
-)
-# For Windows compatibility
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
-
-add_executable(your_test your_test.cc)
-target_link_libraries(your_test GTest::gtest_main GTest::gmock_main)
-add_test(NAME your_test COMMAND your_test)
-```
-
-### 4. Build and Run Your Tests
-
-Build your project as usual. The test executable linked with `gtest_main` or `gmock_main` includes a default `main()` function.
-
-Run your compiled test binary:
+On Windows with Visual Studio, open the generated `gtest.sln` and build from the IDE.
+</Step>
+<Step title="(Optional) Install GoogleTest">
+If you want to install GoogleTest system-wide:
 
 ```bash
-./your_test
+sudo make install
+```
+This installs the headers and libraries to `/usr/local/` by default.
+</Step>
+</Steps>
+
+### Step 3: Integrating GoogleTest into Your Existing CMake Project
+
+You have two main options:
+
+- **Use Installed GoogleTest:** If installed system-wide, use `find_package`:
+
+```cmake
+find_package(GTest CONFIG REQUIRED)
+add_executable(my_tests test1.cpp test2.cpp)
+target_link_libraries(my_tests GTest::gtest_main)
+add_test(NAME my_tests COMMAND my_tests)
 ```
 
-You should see output indicating test results.
+- **Add GoogleTest as a Subdirectory:** Add the GoogleTest source code to your project and use `add_subdirectory`:
 
-### 5. Validate Your Setup
-
-To confirm everything is working, create a minimal test file `sample_test.cc`:
-
-```cpp
-#include <gtest/gtest.h>
-
-TEST(SampleTest, TrueIsTrue) {
-  EXPECT_TRUE(true);
-}
+```cmake
+add_subdirectory(path/to/googletest)
+add_executable(my_tests test1.cpp test2.cpp)
+target_link_libraries(my_tests gtest_main)
+add_test(NAME my_tests COMMAND my_tests)
 ```
 
-Build and run this test; a passing output confirms your installation.
+> **Tip:** Adding GoogleTest as a subdirectory ensures compiler and linker flags match, avoiding runtime conflicts especially on Windows.
 
----
+### Step 4: Using GoogleTest with Bazel
 
-## Using Bazel for Setup
+If your project uses Bazel, add GoogleTest as an external dependency via the provided `WORKSPACE` rules (outside of this guide's scope but widely documented). 
 
-GoogleTest and GoogleMock also support Bazel build tool.
+Example minimal usage:
 
-1. Add `googletest` and `googlemock` dependencies to your WORKSPACE and BUILD files as detailed in the official Bazel documentation.
-2. Run/build tests with `bazel test //path/to:test_target`.
+```bazel
+cc_test(
+    name = "my_test",
+    srcs = ["my_test.cc"],
+    deps = ["@com_google_googletest//:gtest_main"],
+)
+```
 
-Refer to the [Installation with CMake and Bazel](https://github.com/google/googletest/blob/main/docs/prerequisites-installation-setup/installation-cmake-bazel.mdx) page for detailed Bazel instructions.
+### Step 5: Configure Your Compiler to Use C++17
 
----
-
-## Practical Tips
-
-- Always ensure your compiler supports **at least C++17**, as GoogleTest requires this standard.
-- Use `gtest_main` or `gmock_main` libraries to avoid writing your own `main()` function.
-- You can customize build options such as `BUILD_SHARED_LIBS` for shared libraries or `gtest_force_shared_crt` on Windows for runtime library compatibility.
-- When integrating into existing projects, prefer embedding GoogleTest source or using FetchContent to avoid version mismatches.
-
----
-
-## Troubleshooting Common Issues
-
-### Build Errors and Runtime Failures
-- Verify C++ standard compatibility: Set `CMAKE_CXX_STANDARD` to 17 or above.
+GoogleTest requires C++17 support. In CMake projects, set:
 
 ```cmake
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 ```
 
-- On Windows, enable `gtest_force_shared_crt` if you see runtime library conflicts.
+In other build environments, ensure your compiler flags specify support for C++17.
 
-- Ensure that the thread library (pthreads) is linked if your platform requires it.
+### Step 6: Build and Run Your Tests
 
-### Missing Symbols or Linker Errors
-- Confirm you link against the appropriate GoogleTest or GoogleMock targets (`gtest_main`, `gmock_main`, `gtest`, `gmock`).
-- If using pkg-config files, verify that `gmock.pc` or `gmock_main.pc` are correctly referenced.
+Compile your test executable and run it:
 
-### Test Binary Does Not Run or Shows No Tests
-- Double-check your tests are properly registered using `TEST()` or `TEST_F()` macros.
-- Confirm the test binary links with `gtest_main` or includes a valid `main()` function.
+```bash
+./my_tests
+```
+
+You should see output indicating tests running and their results. If all tests pass, your setup is complete.
 
 ---
 
-## Next Steps
+## 3. Practical Examples
 
-- After installation, proceed to write and run your first tests using the [Writing and Running Your First Test](https://github.com/google/googletest/blob/main/docs/getting-started/first-test-debugging/writing-running-first-test.mdx) guide.
-- Explore [Build, Configure, and Validate Your Installation](https://github.com/google/googletest/blob/main/docs/getting-started/prerequisites-installation-setup/build-configure-validate.mdx) for further validation strategies.
-- For mocking capabilities, review GoogleMock's [Mocking API](https://github.com/google/googletest/blob/main/api-reference/core-apis/gmock-mocking-api.mdx).
+### Example: Simple CMakeLists.txt Including GoogleTest
+
+```cmake
+cmake_minimum_required(VERSION 3.14)
+project(MyProject LANGUAGES CXX)
+
+# Enable testing functionality
+enable_testing()
+
+# Add GoogleTest as a subdirectory
+add_subdirectory(googletest)
+
+# Define test executable
+add_executable(my_tests test_mycode.cpp)
+
+# Link with GoogleTest
+target_link_libraries(my_tests gtest_main)
+
+# Use C++17
+set_target_properties(my_tests PROPERTIES
+    CXX_STANDARD 17
+    CXX_STANDARD_REQUIRED ON
+)
+
+# Register the test
+add_test(NAME my_tests COMMAND my_tests)
+```
+
+### Example: Minimal Test Source (test_mycode.cpp)
+
+```c++
+#include <gtest/gtest.h>
+
+TEST(SampleTest, SimpleAssertion) {
+  EXPECT_EQ(1 + 1, 2);
+}
+```
+
+Build your project and run:
+```
+$ cmake -S . -B build
+$ cmake --build build
+$ cd build
+$ ctest
+```
+You should see 1 test run successfully.
+
+---
+
+## 4. Troubleshooting & Tips
+
+<AccordionGroup title="Common Installation Issues">
+<Accordion title="CMake Can't Find GoogleTest">
+Check that GoogleTest is installed or properly included via add_subdirectory. If installed system-wide, use correct `find_package(GTest CONFIG REQUIRED)` and ensure CMake prefix paths include installation directory.
+</Accordion>
+
+<Accordion title="Compiler Errors about C++ Standard">
+Ensure your compiler supports C++17 and your build system or compiler flags specify `-std=c++17` or equivalent.
+</Accordion>
+
+<Accordion title="Linking Errors on Windows with Visual Studio">
+Use the CMake option `-Dgtest_force_shared_crt=ON` when configuring GoogleTest to match your project's runtime library settings (dynamic vs static). This avoids runtime linkage conflicts.
+</Accordion>
+
+<Accordion title="Running Tests Outputs No Tests Found">
+Ensure you have linked your test executable against `gtest_main` or have correctly implemented your own `main()` which calls `testing::InitGoogleTest()` and `RUN_ALL_TESTS()`.
+</Accordion>
+</AccordionGroup>
+
+<Tip>
+Always build GoogleTest and GoogleMock with the same compiler and flags as your own project to avoid ABI incompatibilities.
+</Tip>
+
+<Tip>
+Use `gtest_main` library to avoid writing your own `main()` unless you need custom test initialization.
+</Tip>
+
+---
+
+## 5. Next Steps & Related Content
+
+- Read the [GoogleTest Primer](primer.md) to learn how to write your first tests.
+- Explore [Configuration & Project Integration](getting-started/setup-introduction/configuration-setup) to customize your build further.
+- Check out [Authoring Your First Test](first-test.md) for practical test-writing guidance.
+- Consult [Troubleshooting & Common Issues](first-steps-validation/troubleshooting.md) if you encounter setup problems.
+- Dive into [Advanced Topics](advanced.md) when you're ready to utilize more GoogleTest features.
 
 ---
 
 ## References
-- Official GoogleTest GitHub: [https://github.com/google/googletest](https://github.com/google/googletest)
-- GoogleMock README: [gmock/README.md](https://github.com/google/googletest/blob/main/googlemock/README.md)
-- CMake Integration: [googletest/README.md](https://github.com/google/googletest/blob/main/googletest/README.md)
-- Mocking Reference: [docs/reference/mocking.md](https://github.com/google/googletest/blob/main/docs/reference/mocking.md)
+
+- GoogleTest GitHub Repository: https://github.com/google/googletest
+- CMake Official Site: https://cmake.org/
+- Bazel Build System: https://bazel.build/
 
 
-<Note>
-For automated test discovery and execution, the `RUN_ALL_TESTS()` function runs all registered tests once and returns the appropriate exit code, which you must return from your test binary's `main()`.
-</Note>
+
