--- a/guides/getting-started/first-mock.mdx
+++ b/guides/getting-started/first-mock.mdx
@@ -1,396 +1,215 @@
 ---
-title: "Mocking Your First Class or Function"
-description: "A hands-on tutorial showing how to create and use mock objects in your tests with GoogleMock. Covers the basics of defining mocks, using EXPECT_CALL, ON_CALL, and verifying interactions."
+title: "Writing Your First Mock with GoogleMock"
+description: "Introduces essential mocking concepts by guiding users through creating a simple mock class and verifying interactions using GoogleMock. Emphasizes basics of the MOCK_METHOD macro, simple expectations, and test execution."
 ---
 
-# Mocking Your First Class or Function
+# Writing Your First Mock with GoogleMock
 
-Welcome to this hands-on tutorial that guides you through creating and using mock objects in your tests with GoogleMock. This guide covers everything you need to start mocking classes or functions — from defining mock classes to setting up expectations, specifying default behaviors, and verifying how your mock objects interact during tests.
+## Introduction
 
----
-
-## What You Will Achieve
-
-By following this guide, you will:
-
-- Understand how to define mock classes using `MOCK_METHOD`.
-- Learn the difference and use cases of `EXPECT_CALL` vs. `ON_CALL`.
-- Set up expectations on mock methods, including call count and argument matching.
-- Customize the behavior of mock functions with actions.
-- Verify interactions automatically and use ordering constraints to control call sequences.
-
-This guide assumes you have GoogleTest and GoogleMock installed and properly configured (see Installation Instructions and Prerequisites).
+This guide leads you through the fundamentals of using GoogleMock to create mocks for your C++ interfaces. You will learn how to define a mock class using the `MOCK_METHOD` macro, set simple expectations with `EXPECT_CALL`, and run tests that verify interactions with mocked objects. By the end, you'll understand how mocking helps isolate and test interactions in your code effectively.
 
 ---
 
-## Prerequisites
+## 1. Understanding GoogleMock Mocks
 
-- Basic understanding of C++ virtual classes and inheritance.
-- GoogleTest and GoogleMock installed (refer to [Installation Instructions](/getting-started/setup-basics/installation)).
-- Your project set up to include `<gmock/gmock.h>` and link against GoogleMock libraries.
+GoogleMock allows you to create **mock classes** that simulate the behavior of real classes or interfaces, enabling you to verify that your code interacts with those classes correctly during tests. Mocks specify:
 
----
+- Which methods are expected to be called,
+- How many times they should be called,
+- What arguments they should be called with,
+- What values they return or actions they perform.
 
-# Getting Started with Mocking
-
-Mock objects simulate real objects for testing. They implement the same interfaces but allow you to set expectations about how their methods are called, and what they should return or do.
-
-GoogleMock offers a rich, expressive syntax to create, configure, and verify mocks effortlessly.
+Mocks are invaluable for testing code that depends on complex or external systems by replacing those dependencies with controllable and observable stand-ins.
 
 ---
 
-## 1. Define Your Mock Class
+## 2. Defining a Mock Class
 
-Begin by creating a mock class that inherits from the interface or base class you plan to mock. Use the `MOCK_METHOD` macro to declare mock methods.
+To use GoogleMock, you define a mock class by inheriting from an interface or base class and using the `MOCK_METHOD` macro to mock virtual methods.
 
-### Syntax of MOCK_METHOD
+### Step-by-Step: Create a Mock Class
 
-```cpp
-MOCK_METHOD(return_type, method_name, (arg_types...), (optional_qualifiers));
-```
-
-- Place `MOCK_METHOD` declarations in the `public:` section of your mock, regardless of whether the base method is public, protected, or private.
-- For overriding `const` methods, add `(const, override)` as qualifiers.
-- If overriding `virtual` methods, always add `(override)`.
-
-### Examples
-
-Mocking a simple interface:
+<Steps>
+<Step title="Include GoogleMock Header">
+Add the following include to your test or mock header file:
 
 ```cpp
 #include <gmock/gmock.h>
-
-class Foo {
- public:
-  virtual ~Foo() = default;
-  virtual int GetSize() const = 0;
-  virtual std::string Describe(const char* name) = 0;
-};
-
-class MockFoo : public Foo {
- public:
-  MOCK_METHOD(int, GetSize, (), (const, override));
-  MOCK_METHOD(std::string, Describe, (const char* name), (override));
-};
 ```
-
-Mocking a class template:
+</Step>
+<Step title="Derive from Interface or Base Class">
+Define a class that inherits from the interface or base class you want to mock.
+</Step>
+<Step title="Use MOCK_METHOD Macro">
+For each virtual method you want to mock, write a macro:
 
 ```cpp
-template <typename T>
-class StackInterface {
- public:
-  virtual ~StackInterface() = default;
-  virtual int GetSize() const = 0;
-  virtual void Push(const T& x) = 0;
-};
-
-template <typename T>
-class MockStack : public StackInterface<T> {
- public:
-  MOCK_METHOD(int, GetSize, (), (const, override));
-  MOCK_METHOD(void, Push, (const T& x), (override));
-};
+MOCK_METHOD(ReturnType, MethodName, (Args...), (Qualifiers));
 ```
 
-### Handling Types with Commas
+- `ReturnType`: The method's return type.
+- `MethodName`: The method's name.
+- `(Args...)`: Parenthesized argument types.
+- `(Qualifiers)`: Optional list such as `(const, override)`.
 
-If your return or argument types contain commas (e.g., `std::pair<bool, int>`), wrap them in parentheses or define type aliases, like this:
+Example mocking a simple interface:
 
 ```cpp
-using BoolAndInt = std::pair<bool, int>;
-class MyMock {
+class Turtle {
  public:
-  MOCK_METHOD((BoolAndInt), GetPair, ());
+  virtual ~Turtle() {}
+  virtual void PenUp() = 0;
+  virtual void Forward(int distance) = 0;
+  virtual int GetX() const = 0;
+};
+
+class MockTurtle : public Turtle {
+ public:
+  MOCK_METHOD(void, PenUp, (), (override));
+  MOCK_METHOD(void, Forward, (int distance), (override));
+  MOCK_METHOD(int, GetX, (), (const, override));
 };
 ```
+</Step>
+</Steps>
+
+**Important:** Always place `MOCK_METHOD` declarations in the **public** section, even if they mock protected or private virtual methods from the base class.
 
 ---
 
-## 2. Create Mock Objects
+## 3. Setting Expectations on Mocks
 
-Once your mock class is ready, instantiate mock objects in your tests like any other class.
+After defining a mock object, you set expectations using the `EXPECT_CALL` macro to specify expected method calls, their arguments, and their behavior.
 
-```cpp
-MockFoo mock_foo;
-```
-
-You can also use special wrappers for different strictness levels on uninteresting calls:
-
-- `NiceMock<T>`: suppresses warnings for calls without expectations.
-- `NaggyMock<T>`: default behavior; shows warnings.
-- `StrictMock<T>`: treats uninteresting calls as errors.
-
-Example:
+### Basic Syntax
 
 ```cpp
-using ::testing::NiceMock;
-NiceMock<MockFoo> nice_mock;
+EXPECT_CALL(mock_object, MethodName(arg_matchers))
+    .Times(n)
+    .WillOnce(action)
+    .WillRepeatedly(action);
 ```
 
-> Tip: Use `NiceMock` for less noisy tests during development and `StrictMock` when you want to enforce strict interaction contracts.
-
----
-
-## 3. Specify Default Behavior with `ON_CALL`
-
-`ON_CALL` allows you to define the default behavior of a mocked method when it is called but you do **not** require or expect the call.
-
-### Syntax
-
-```cpp
-ON_CALL(mock_object, Method(matchers))
-    .With(multi_argument_matcher) // optional
-    .WillByDefault(action);
-```
-
-- The `.With()` clause is optional and restricts matching to argument tuples as a whole.
-- The `.WillByDefault()` clause **must** appear exactly once and defines what the method returns or does by default.
-- Actions can be built-in like `Return(value)`, lambdas, or function pointers.
-
-### Example
+### Example: Expecting Calls and Specifying Returns
 
 ```cpp
 using ::testing::Return;
-using ::testing::_;
 
-ON_CALL(mock_foo, GetSize())
-    .WillByDefault(Return(10));
+MockTurtle turtle;
 
-ON_CALL(mock_foo, Describe(_))
-    .WillByDefault([](const char* name) {
-      return std::string("Hello, ") + name;
-    });
+// Expect PenUp() to be called exactly once.
+EXPECT_CALL(turtle, PenUp()).Times(1);
+
+// Expect Forward() to be called with any integer argument twice.
+EXPECT_CALL(turtle, Forward(::testing::_)).Times(2);
+
+// Expect GetX() to be called and return 10.
+EXPECT_CALL(turtle, GetX()).WillOnce(Return(10));
+
+// Use the mock
+...
+turtle.PenUp();
+turtle.Forward(100);
+turtle.Forward(50);
+int x = turtle.GetX();  // x == 10
 ```
 
-### Notes
+### Notes:
 
-- Default actions will *only* run if no matching `EXPECT_CALL` matches the call.
-- You can override them per test or per expectation.
+- Use `_` (underscore matcher) to indicate "match any argument".
+- If `Times()` is omitted, GoogleMock assumes the method is called once.
+- Multiple `WillOnce()` clauses specify the return or behaviors in call order.
+- `WillRepeatedly()` defines the behavior for all calls beyond those covered by `WillOnce()`.
 
 ---
 
-## 4. Set Expectations with `EXPECT_CALL`
+## 4. Running Tests With Mocks
 
-`EXPECT_CALL` not only defines the behavior of a mock method but also sets an expectation that the method will be called with given arguments, number of times, and order.
+Mocks are used just like normal objects. When a test runs, GoogleMock verifies that all specified expectations are met, and reports failures if:
 
-### Syntax
+- Expected calls do not happen,
+- Calls happen with unexpected arguments,
+- Calls happen more or fewer times than expected.
 
-```cpp
-EXPECT_CALL(mock_object, Method(matchers))
-    .With(multi_argument_matcher) // optional
-    .Times(cardinality)           // optional
-    .InSequence(sequence1, ...)   // optional
-    .After(expectation_or_set)    // optional
-    .WillOnce(action)             // may appear multiple times
-    .WillRepeatedly(action)       // optional
-    .RetiresOnSaturation()        // optional
-;
-```
-
-- Matchers specify argument expectations (wildcards: `_`, comparison matchers, custom matchers).
-- `Times()` controls how many times the call should occur. Omitting it causes gMock to infer the cardinality.
-- `InSequence()` enforces call order based on one or more `Sequence` objects.
-- `After()` constrains a call to happen after others.
-- `WillOnce()` defines behavior for specific calls in order.
-- `WillRepeatedly()` defines behavior after all `WillOnce()` calls are exhausted.
-- `RetiresOnSaturation()` tells gMock to retire the expectation as soon as it has been fully satisfied — useful for non-sticky expectations.
-
-### Basic Examples
-
-Single call expected:
-
-```cpp
-EXPECT_CALL(mock_foo, GetSize())
-    .WillOnce(Return(42));
-```
-
-Multiple calls with sequence:
-
-```cpp
-using ::testing::InSequence;
-InSequence seq;
-
-EXPECT_CALL(mock_foo, Begin());
-EXPECT_CALL(mock_foo, Process(_)).Times(3);
-EXPECT_CALL(mock_foo, End());
-```
-
-Catch-all expectation with unlimited calls:
-
-```cpp
-EXPECT_CALL(mock_foo, Describe(_)).Times(::testing::AnyNumber());
-```
-
-### Ordering and Partial Ordering
-
-- Default: expectations can match in any order.
-- Use `InSequence` to require strict sequential order.
-- Use `After` to build flexible partial orders.
-
-### Stickiness of Expectations
-
-Expectations by default remain active (sticky) after saturation.
-Use `.RetiresOnSaturation()` to make them inactive upon saturation. This is essential to prevent failing tests when multiple similar calls are expected.
-
----
-
-## 5. Techniques for Mocking
-
-### Suppressing Warnings on Uninteresting Calls
-
-If you don't care about certain methods, you can:
-
-- Omit any `EXPECT_CALL` or `ON_CALL` and accept default behavior (may show warnings).
-- Use `NiceMock` to suppress warnings for the entire mock.
-- Explicitly allow calls with `EXPECT_CALL(...).Times(AnyNumber())` to silence specific methods.
-
-### Matching Arguments
-
-- Use built-in matchers (e.g., `Eq()`, `Gt()`, `_` (wildcard)) to specify argument expectations.
-- Combine matchers for complex argument requirements with `AllOf()`, `AnyOf()`, `Not()`, etc.
-- Use `.With()` to combine multiple arguments into a single tuple matcher.
-
-### Setting Actions
-
-Beyond simple returns, specify custom actions:
-
-- `Return(value)`, `ReturnRef(variable)`, `ReturnPointee(pointer)`.
-- Lambdas or callable objects as actions.
-- `DoAll()` for multiple side effects.
-- Output argument modification with `SetArgPointee<N>(value)` and `SetArrayArgument<N>(begin, end)`.
-
-### Delegation
-
-- Delegate calls to a fake or real object using `ON_CALL(...).WillByDefault(...)` with a lambda.
-- Call parent class's concrete method in actions to preserve original behavior.
-
-### Complex Expectations
-
-- Use `Sequence` and `InSequence` to specify order.
-- Combine multiple expectations with `After` or an `ExpectationSet`.
-
-### Verifying and Clearing Mocks
-
-GoogleMock automatically verifies expectations on mock destruction. You can force verification earlier with:
-
-```cpp
-Mock::VerifyAndClearExpectations(&mock_obj);
-```
-
-To reset both expectations and default actions:
-
-```cpp
-Mock::VerifyAndClear(&mock_obj);
-```
-
-You can allow a mock to be leaked (not verified) with:
-
-```cpp
-Mock::AllowLeak(&mock_obj);
-```
-
----
-
-## 6. Practical Example: Mocking and Using Expectations
-
-Here's a complete sample demonstrating the basics:
+Here’s a simple test example:
 
 ```cpp
 #include <gmock/gmock.h>
 #include <gtest/gtest.h>
 
 using ::testing::Return;
-using ::testing::_;
-using ::testing::InSequence;
 
-class MyInterface {
- public:
-  virtual ~MyInterface() = default;
-  virtual int Add(int x, int y) = 0;
-  virtual void Print(const std::string& text) = 0;
-};
+TEST(PainterTest, DrawsWithTurtle) {
+  MockTurtle mock_turtle;
 
-class MockMyInterface : public MyInterface {
- public:
-  MOCK_METHOD(int, Add, (int x, int y), (override));
-  MOCK_METHOD(void, Print, (const std::string& text), (override));
-};
+  EXPECT_CALL(mock_turtle, PenUp()).Times(1);
+  EXPECT_CALL(mock_turtle, Forward(::testing::_)).Times(2);
+  EXPECT_CALL(mock_turtle, GetX()).WillOnce(Return(42));
 
-TEST(MockExample, BasicUsage) {
-  MockMyInterface mock;
-
-  // Set default behavior
-  ON_CALL(mock, Add(_, _)).WillByDefault(Return(0));
-
-  // Set expectations
-  EXPECT_CALL(mock, Add(1, 2))
-      .Times(1)
-      .WillOnce(Return(3));
-
-  EXPECT_CALL(mock, Print(_))
-      .Times(::testing::AnyNumber());
-
-  // Exercise the mock
-  EXPECT_EQ(mock.Add(1, 2), 3);
-  mock.Print("hello");
-  mock.Print("world");
+  // Code under test uses mock_turtle...
+  mock_turtle.PenUp();
+  mock_turtle.Forward(10);
+  mock_turtle.Forward(20);
+  int pos = mock_turtle.GetX();
+  EXPECT_EQ(pos, 42);
 }
 ```
 
-Outcome:
-- `Add(1, 2)` is expected exactly once to return 3.
-- Any call to `Print` is allowed any number of times.
-- Any other `Add` calls will return 0 by default.
+When running this, any deviation from expectations will generate descriptive errors.
 
 ---
 
-## 7. Troubleshooting & Best Practices
+## 5. Best Practices & Tips
 
-### Common Issues
-
-- **Uninteresting call warnings**: Usually indicate that `EXPECT_CALL` was not set for this method. Consider using `NiceMock` or add `EXPECT_CALL(...).Times(AnyNumber())` if intentionally ignored.
-- **Unexpected calls**: A call matches no expectation—either fix expectation or the test logic.
-- **Too many or too few calls**: Check `Times()` clause carefully; use `.RetiresOnSaturation()` for non-sticky expectations.
-- **Ambiguous overloads**: Specify argument matchers or use `Const()` to disambiguate.
-
-### Tips for Success
-
-- Use `ON_CALL` to set common default behaviors in test fixtures; rely on `EXPECT_CALL` to verify important interactions sparingly.
-- Use `_` matcher for arguments you don't care about; over-specifying matchers leads to brittle tests.
-- Use sequences or `After` clauses to assert call order when necessary, but prefer loose ordering to avoid fragile tests.
-- Avoid mocking non-virtual methods directly; consider interface extraction or compile-time mocking.
+- **Mock Only What You Own:** Restrict mocking to interfaces or classes you maintain.
+- **Match Only What Matters:** Use general argument matchers (`_`) unless specific values matter.
+- **Avoid Over-Specification:** Overly strict expectations lead to brittle tests.
+- **Use `NiceMock` for Less Noise:** Wrap your mocks in `NiceMock<YourMock>` to suppress warnings about uninteresting calls.
+- **Use `StrictMock` for Tight Verification:** Wrap mocks in `StrictMock<YourMock>` to turn uninteresting calls into errors.
+- **Retire Expectations if Needed:** Use `.RetiresOnSaturation()` when correct to avoid sticky expectations causing false failures.
 
 ---
 
-## 8. Next Steps & Related Documentation
+## 6. Troubleshooting Common Issues
 
-- [Writing and Running Your First Test](/guides/getting-started/quickstart-testing): Learn how to get up and running with basic tests.
-- [Mocking Reference](/api-reference/mocking-framework/mock-objects-and-methods): In-depth technical reference on mocking APIs.
-- [Matchers Reference](/api-reference/actions-matchers-extensions/matchers-library-and-customization): Deep dive into argument matchers.
-- [Actions Reference](/api-reference/actions-matchers-extensions/action-templates-and-custom-actions): Explore how to customize mock behaviors.
-- [Organizing Tests and Test Suites](/guides/getting-started/test-structure): Manage and organize tests effectively.
-
----
-
-Enjoy mocking your first class or function! Your mastery here unlocks powerful testing capabilities to ensure your code works correctly through expressive and maintainable tests.
-
----
-
-<AccordionGroup title="Additional Resources and Tips">
-<Accordion title="Understanding Uninteresting vs Unexpected Calls">
-Great tests only add expectations for behaviors that matter. Use `ON_CALL` to set default behaviors, and `EXPECT_CALL` when you want to verify specific calls. Use `NiceMock` to suppress warnings from uninteresting calls.
+<AccordionGroup title="Common Issues and Solutions">
+<Accordion title="Mock Method Not Called Error">
+Check that your `EXPECT_CALL` is set **before** the method on the mock object is called. GoogleMock requires expectations to be established beforehand.
 </Accordion>
-<Accordion title="Retiring Expectations to Avoid Sticky Failures">
-Use `.RetiresOnSaturation()` to disable an expectation after it is fully satisfied. This helps prevent errors when calls exceed expectations in loops or multiple invocations.
+<Accordion title="Uninteresting Function Call Warning">
+Occurs when a mock method is called but has no matching `EXPECT_CALL`. To suppress, use `NiceMock` or add a catch-all `EXPECT_CALL(mock, Method(_)).Times(AnyNumber())`.
 </Accordion>
-<Accordion title="Ordering Calls with Sequences and After">
-Put related expectations inside an `InSequence` block to require order. For more complex partial orders, use `.After()` with `Expectation` or `ExpectationSet` to express dependencies.
+<Accordion title="Compilation Errors for MOCK_METHOD">
+- Verify that return and argument types with commas are enclosed in parentheses.
+- Ensure `MOCK_METHOD` is used within a public section.
 </Accordion>
-<Accordion title="Mocking Move-Only Types">
-GoogleMock supports mocking methods with move-only types like `std::unique_ptr<T>`. Use lambdas in `WillOnce()` or `WillRepeatedly()` to return fresh objects where needed.
+<Accordion title="Overloaded Methods Ambiguity">
+If mocking overloaded methods, specify parameter types explicitly or use aliases to disambiguate.
 </Accordion>
-<Accordion title="Using Matchers Effectively">
-Use matchers like `_`, `Eq()`, `Ge()`, `Field()`, and custom matchers to make your expectations clear but flexible enough to avoid brittle tests.
+<Accordion title="Virtual Destructor Requirement">
+The base class must have a virtual destructor for mocks to clean up properly.
 </Accordion>
 </AccordionGroup>
+
+---
+
+## 7. Next Steps
+
+- Explore [Using Assertions and Matchers Effectively](/guides/core-scenarios/assertions-matchers) to verify test conditions reliably.
+- Learn about [Advanced Mocking Patterns and Expectations](/guides/core-scenarios/working-with-mocks) for deeper usage.
+- Refer to the [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) for recipes and advanced techniques.
+- Combine with [Authoring Your First Test](/guides/getting-started/first-test) to write comprehensive test suites.
+
+---
+
+## Additional Resources
+
+- [GoogleMock Reference](docs/reference/mocking.md)
+- [gMock Primer: gMock for Dummies](docs/gmock_for_dummies.md)
+- [Mocking FAQ](docs/gmock_faq.md)
+- [GoogleTest Primer and GoogleTest Installation Guides](/getting-started/)
+
+---
+
+By mastering these basics, you equip yourself to write focused, effective unit tests that enhance code quality with clear, verifiable behavioral contracts through mocking.
