--- a/guides/core-scenarios/parameterized-tests.mdx
+++ b/guides/core-scenarios/parameterized-tests.mdx
@@ -1,346 +1,341 @@
 ---
-title: "Parameterizing Your Tests for Broader Coverage"
-description: "Introduces value- and type-parameterized testing, demonstrating how to write tests that automatically run across multiple configurations or data types. Walks through macros and patterns for effective parametrization."
+title: "Parameterized and Type-Parameterized Tests"
+description: "Guides users through testing code with multiple input values or varying generic types using GoogleTest's parameterized and type-parameterized test support. Includes practical setup, generators, and real application examples."
 ---
 
-# Parameterizing Your Tests for Broader Coverage
+# Parameterized and Type-Parameterized Tests in GoogleTest
 
-Welcome to the guide on parameterizing your tests within GoogleTest. This documentation focuses specifically on how to write tests that automatically run across multiple configurations or data types using value- and type-parameterized testing techniques. By leveraging these patterns, your tests become far more flexible and maintainable, covering broader scenarios without duplication.
-
----
-
-## 1. What Are Parameterized Tests?
-
-Parameterized tests allow a single test logic to run multiple times with different inputs or types. They enable you to:
-
-- Test a piece of code with varying data values.
-- Validate the same behavior across multiple data types or configurations.
-- Avoid redundant, copy-pasted test code.
-
-GoogleTest supports three advanced parametrization methods:
-
-- **Value-Parameterized Tests:** Vary test input values.
-- **Typed Tests:** Run tests over a fixed list of types.
-- **Type-Parameterized Tests:** Define abstract test logic that can be instantiated with different types later.
-
-This guide will walk you sequentially through these kinds of parameterized tests, showing practical macros and patterns.
+GoogleTest empowers you to systematically test your code against multiple input values and generic type variations without duplicating code. This guide walks you through how to write and instantiate **parameterized tests** (value-driven) and **typed tests** (type-driven), two powerful mechanisms to enhance test coverage and maintainability.
 
 ---
 
-## 2. Prerequisites
+## 1. Overview of Parameterized and Type-Parameterized Testing
 
-Before parameterizing your tests, ensure that:
+### What Does This Guide Help You Accomplish?
+This guide teaches you how to write tests that run the same logic with different input data or types, enabling more thorough and concise testing.
 
-- You have basic GoogleTest tests written using `TEST()` or `TEST_F()` macros.
-- Your environment is set up following the system requirements, compiler support, and build tooling documented in [System Requirements](https://github.com/google/googletest/blob/main/getting-started/setup-overview/system-requirements.mdx).
-- You have included GoogleTest headers, namely `<gtest/gtest.h>`.
+### Prerequisites
+- Familiarity with basic GoogleTest concepts such as `TEST`, `TEST_F`, and test fixtures.
+- A working GoogleTest setup with `gtest/gtest.h` included.
+- Basic understanding of C++ templates for typed tests.
+
+### Expected Outcome
+- Ability to define tests that run multiple times with different parameters or types.
+- Mastery in generators for input values for parameterized tests.
+- Understanding how to instantiate and name these test patterns.
+
+### Time Estimate
+This guide takes roughly 15-30 minutes to read and experiment with.
+
+### Difficulty Level
+Intermediate (knowledge of C++ and GoogleTest basics assumed).
 
 ---
 
-## 3. Value-Parameterized Tests: Testing With Different Inputs
+## 2. Writing Parameterized Tests
 
-Value-parameterized tests let you write a test once and run it multiple times with different input values automatically. This is ideal when testing functions or classes that behave differently depending on the input.
+Parameterized tests let you run the **same test logic with various input values** without manually duplicating the test code for each input.
 
-### 3.1 Workflow Overview
-
-- **Define a Test Fixture:** Derive a class from `testing::TestWithParam<T>`, where `T` is your parameter type.
-- **Write Parameterized Test:** Use `TEST_P()` macro with the fixture to write tests that use `GetParam()` to access the parameter.
-- **Instantiate Tests:** Use `INSTANTIATE_TEST_SUITE_P()` to specify the parameter values or generators for your test.
-
-### 3.2 Step-by-Step Instructions
-
-<Steps>
-<Step title="Define Your Parameterized Test Fixture">
-Create a fixture class inherited from `testing::TestWithParam<T>`. This gives your test access to a parameter of type `T` via `GetParam()`.
+### Step 1: Define a Parameterized Test Fixture
+Create a test fixture that inherits from `::testing::TestWithParam<T>`, where `T` is the type of your parameter(s).
 
 ```cpp
-class FooTest : public testing::TestWithParam<int> {
-  // Optionally add members here.
+class FooTest : public ::testing::TestWithParam<int> {
+  // You can define data members and helper methods here
 };
 ```
 
-This fixture will be the basis for writing parameterized tests.
-</Step>
-
-<Step title="Write Parameterized Tests Using `TEST_P`">
-Write your test using the `TEST_P()` macro, which binds to your fixture. Inside the test, access inputs with `GetParam()`.
+### Step 2: Write Your Tests Using `TEST_P`
+Within the parameterized test, access the current parameter with `GetParam()`.
 
 ```cpp
-TEST_P(FooTest, HandlesVariousValues) {
+TEST_P(FooTest, DoesBlah) {
   int value = GetParam();
-  EXPECT_LT(value, 100);  // Example assertion
+  EXPECT_TRUE(value % 2 == 0);  // For example, check if even.
 }
 ```
-</Step>
 
-<Step title="Instantiate the Test with Parameters">
-Use `INSTANTIATE_TEST_SUITE_P` to specify the parameters. You provide a unique instantiation name, the test fixture, and a parameter generator such as `Values()`, `Range()`, or `ValuesIn()`.
+You can define multiple `TEST_P` test cases per fixture.
+
+### Step 3: Instantiate the Test Suite with Parameters
+Use `INSTANTIATE_TEST_SUITE_P` to generate tests with different parameters.
 
 ```cpp
+INSTANTIATE_TEST_SUITE_P(ValidValues, FooTest, ::testing::Values(2, 4, 6));
+```
+
+This creates three test instances named:
+- `ValidValues/FooTest.DoesBlah/0` with param 2
+- `ValidValues/FooTest.DoesBlah/1` with param 4
+- `ValidValues/FooTest.DoesBlah/2` with param 6
+
+### Step 4: Use Parameter Generators for Complex Sequences
+GoogleTest provides built-in generators to create parameter sequences:
+- `Values(v1, v2, ..., vN)`: Enumerated values.
+- `ValuesIn(container)`: Use values from arrays or containers.
+- `Range(start, end, [step])`: Numeric ranges (excluding `end`).
+- `Bool()`: Tests with `false` and `true`.
+- `Combine(g1, g2, ...)`: Cartesian product of multiple generators.
+
+**Example:**
+
+```cpp
+class FlagTest : public ::testing::TestWithParam<std::tuple<bool, int>> {};
+
+TEST_P(FlagTest, WorksForAllCombinations) {
+  bool flag;
+  int number;
+  std::tie(flag, number) = GetParam();
+  // Test your code with flag and number
+}
+
 INSTANTIATE_TEST_SUITE_P(
-    IntValues, FooTest, testing::Values(1, 10, 50, 99));
+    AllVariations, FlagTest,
+    ::testing::Combine(::testing::Bool(), ::testing::Values(0, 1, 2)));
 ```
 
-This will create tests named like `IntValues/FooTest.HandlesVariousValues/0`, etc., corresponding to each parameter.
+This creates 6 tests with all combinations of flag and number parameters.
 
-You can also use:
-- `Range(begin, end, step)` for sequences
-- `ValuesIn(container)` for external containers
-- `Bool()` for testing boolean flag combinations
-- `Combine()` for Cartesian product of parameters
-</Step>
+<Tip>
+Use `Combine()` to exhaustively test multiple parameters together, helping ensure your code behaves correctly for all input combinations.
+</Tip>
 
-<Step title="Run and Verify Your Parameterized Tests">
-After compilation, when you invoke your test executable, GoogleTest will run the test body once for each parameter value.
+### Step 5: Custom Parameter Names (Recommended)
+By default, parameterized test names are numbered. To generate descriptive names, provide a **name generator function or functor**.
 
-Usage example with output names:
-```shell
-$ ./my_param_test  
-[ RUN      ] IntValues/FooTest.HandlesVariousValues/0
-[       OK ] IntValues/FooTest.HandlesVariousValues/0
-[ RUN      ] IntValues/FooTest.HandlesVariousValues/1
-[       OK ] IntValues/FooTest.HandlesVariousValues/1
-...
+```cpp
+std::string MyParamName(const ::testing::TestParamInfo<int>& info) {
+  return "Val" + std::to_string(info.param);
+}
+
+INSTANTIATE_TEST_SUITE_P(WithNamedParams, FooTest, ::testing::Values(1, 2, 3), MyParamName);
 ```
-</Step>
-</Steps>
 
-### 3.3 Practical Tips
+This results in test names like `WithNamedParams/FooTest.DoesBlah/Val1`.
 
-- Ensure the parameter type `T` is copyable and printable. Define a streaming operator or `PrintTo()` function if needed.
-- When using string parameters, customize test names with a name generator functor or lambda to ensure test names are valid and descriptive.
-- Always give unique names to each `INSTANTIATE_TEST_SUITE_P` instantiation prefix.
-
-### 3.4 Common Pitfalls
-
-- Forgetting to instantiate a test suite leads to a link-time warning. Use `GTEST_ALLOW_UNINSTANTIATED_PARAMETERIZED_TEST(FooTest);` to suppress if doing abstract tests.
-- Using a test fixture constructor or destructor for setup is discouraged when parameters depend on runtime values; use `SetUp()` instead.
+<Warning>
+Test names generated by `name_generator` **must be unique, non-empty, and contain only alphanumeric characters (no underscores).** Underscores are reserved for special usages in GoogleTest and can cause naming collisions.
+</Warning>
 
 ---
 
-## 4. Typed Tests: Running Tests Against Multiple Types
+## 3. Writing Typed Tests
 
-Typed tests run the same test logic against a list of types known at compile time. This is perfect when verifying that multiple implementations or variations of a class meet a specification.
+Typed tests let you run the **same test logic for different C++ types**. This is useful when you want to verify that different type implementations or templates satisfy expected behaviors.
 
-### 4.1 Workflow Overview
+### Step 1: Define a Fixture Template
+Create a class template inheriting from `::testing::Test`:
 
-- **Define a Typed Test Fixture Template:** Parameterized on type `T`, derive from `testing::Test`.
-- **Declare the Type List:** Use `testing::Types<A, B, C>` to specify your types.
-- **Declare the Typed Test Suite:** Use `TYPED_TEST_SUITE()` with your fixture and type list.
-- **Write Typed Tests:** Use `TYPED_TEST()` to write the test logic once, using the special `TypeParam` alias.
-- **Run Tests:** GoogleTest will instantiate and run tests for each type.
-
-### 4.2 Step-by-Step Instructions
-
-<Steps>
-<Step title="Define a Fixture Template">
 ```cpp
 template <typename T>
-class MyTypedTest : public testing::Test {
+class MyTypedTest : public ::testing::Test {
  public:
+  void SomeHelper() {
+    // Helper code common for all types
+  }
   T value_;
-  // shared static members or functions can be added here
 };
 ```
-</Step>
 
-<Step title="Create the Type List and Test Suite">
-Define a type list and associate it with your fixture.
+### Step 2: Define the Types to Test
+Create a type list using `::testing::Types<...>`.
 
 ```cpp
-using MyTypes = ::testing::Types<int, double, std::string>;
+using MyTypes = ::testing::Types<int, double, char>;
+```
+
+### Step 3: Associate the Fixture with the Types Using `TYPED_TEST_SUITE`
+
+```cpp
 TYPED_TEST_SUITE(MyTypedTest, MyTypes);
 ```
-</Step>
 
-<Step title="Write the Typed Tests">
-Use `TYPED_TEST()` to write test logic once.
+### Step 4: Write Typed Tests Using `TYPED_TEST`
+
+Within the tests, `TypeParam` refers to the current test type. Use it to declare variables or customize behavior.
 
 ```cpp
-TYPED_TEST(MyTypedTest, DefaultConstructible) {
-  TypeParam value = this->value_;
-  // Tests using value
-  EXPECT_TRUE(value == value);
+TYPED_TEST(MyTypedTest, IsDefaultConstructible) {
+  TypeParam value{};
+  (void)value;  // Just check it compiles and default constructs
+  EXPECT_TRUE(std::is_default_constructible<TypeParam>::value);
+}
+
+TYPED_TEST(MyTypedTest, CanBeCopied) {
+  TypeParam val1{};
+  TypeParam val2 = val1;
+  (void)val2;
 }
 ```
-</Step>
 
-<Step title="Run the Typed Tests">
-Compile and run as usual. Each test is run once per type.
+Multiple typed tests can be added easily.
 
+### Step 5: Optional - Use Custom Type Names for Test Output
+You can provide a custom name generator class with a static template `GetName(int)` method to control the names GoogleTest outputs.
+
+```cpp
+class MyTypeNames {
+ public:
+  template <typename T>
+  static std::string GetName(int) {
+    if (std::is_same<T, int>::value) return "Int";
+    if (std::is_same<T, double>::value) return "Double";
+    if (std::is_same<T, char>::value) return "Char";
+    return "Unknown";
+  }
+};
+
+TYPED_TEST_SUITE(MyTypedTest, MyTypes, MyTypeNames);
 ```
-[ RUN      ] MyTypedTest/0.DefaultConstructible
-[       OK ] MyTypedTest/0.DefaultConstructible
-[ RUN      ] MyTypedTest/1.DefaultConstructible
-[       OK ] MyTypedTest/1.DefaultConstructible
-[ RUN      ] MyTypedTest/2.DefaultConstructible
-[       OK ] MyTypedTest/2.DefaultConstructible
-```
-</Step>
-</Steps>
 
-### 4.3 Best Practices
+This improves test readability when running typed tests.
 
-- Use meaningful type names or supply a name generator when types have long or cryptic names.
-- Make sure your fixture correctly handles each type, and use `this->` qualifier if needed to access fixture members.
+<Note>
+Many compilers implement the elaborated type names automatically, but custom naming ensures consistent output and better readability.
+</Note>
 
 ---
 
-## 5. Type-Parameterized Tests: Abstract Test Patterns for Flexible Types
+## 4. Writing Type-Parameterized Tests
 
-Type-parameterized tests extend typed tests by allowing you to write abstract test logic without specifying types upfront. You can register tests, then instantiate them with different type lists or even single types anywhere.
+Type-parameterized tests expand upon typed tests by allowing definition of generic test patterns without specifying types upfront. To use different type lists, instantiate the test pattern one or more times.
 
-### 5.1 Workflow Overview
-
-- **Define a Fixture Template:** Similar to typed tests.
-- **Declare Test Suite as Parameterized:** Use `TYPED_TEST_SUITE_P()`.
-- **Define Tests:** Use `TYPED_TEST_P()` to define tests.
-- **Register Tests:** Call `REGISTER_TYPED_TEST_SUITE_P()` with all test names.
-- **Instantiate:** Use `INSTANTIATE_TYPED_TEST_SUITE_P(prefix, suite, types)` to run tests with specific types.
-
-### 5.2 Step-by-Step Instructions
-
-<Steps>
-<Step title="Declare the Abstract Test Suite">
+### Step 1: Define the Fixture Template
 
 ```cpp
 template <typename T>
-class MyAbstractTest : public testing::Test {
-  // Fixture members
+class PatternTest : public ::testing::Test {
+ public:
+  void Helper() {}
+};
+```
+
+### Step 2: Declare the Test Suite to be Type-Parameterized
+
+```cpp
+TYPED_TEST_SUITE_P(PatternTest);
+```
+
+### Step 3: Define Tests Using `TYPED_TEST_P`
+
+```cpp
+TYPED_TEST_P(PatternTest, DoesThing) {
+  TypeParam value{};
+  this->Helper();
+  // test body here
+}
+
+TYPED_TEST_P(PatternTest, HasProperty) {
+  EXPECT_TRUE(true);
+}
+```
+
+### Step 4: Register Tests
+
+```cpp
+REGISTER_TYPED_TEST_SUITE_P(PatternTest, DoesThing, HasProperty);
+```
+
+### Step 5: Instantiate the Pattern with Desired Types
+
+```cpp
+using MyTypes = ::testing::Types<int, float>;
+INSTANTIATE_TYPED_TEST_SUITE_P(Instantiation1, PatternTest, MyTypes);
+```
+
+You can instantiate the same pattern multiple times with different type lists.
+
+---
+
+## 5. Best Practices & Common Pitfalls
+
+### Parameterized Tests
+- Always prefer `::testing::TestWithParam<T>` or its aliases for the fixture.
+- Use the built-in parameter generators to make your test parameter lists manageable and expressive.
+- Define custom parameter naming functions to improve test traceability.
+- Avoid underscores in test suite and test names to prevent naming conflicts.
+
+### Typed and Type-Parameterized Tests
+- Use when you want to verify multiple implementations of the same interface or multiple types satisfy the same concept.
+- Keep your test code agnostic of the types but use `TypeParam` for type-specific logic.
+- Use custom name generators for readable type names in test output.
+
+### Common Pitfalls
+- Forgetting to instantiate parameterized or typed test suites leads to no tests running or warnings.
+- Using `TEST()` or `TEST_F()` macros with parameterized tests won't work as expected.
+- Using parameter types not copyable or default constructible without necessary conversions causes compilation errors.
+
+### Troubleshooting
+- If tests aren't running, verify that you have properly instantiated them using `INSTANTIATE_TEST_SUITE_P` or `INSTANTIATE_TYPED_TEST_SUITE_P`.
+- Naming conflicts due to underscores can silently make tests not run or report incorrectly; follow the naming guidelines strictly.
+- Make sure parameter types used in fixtures are suitable for GoogleTest's expectations (copyable, printable).
+
+---
+
+## 6. Real-World Example
+
+### Parameterized Test Example
+
+```cpp
+class QueueTest : public ::testing::TestWithParam<int> {
+ protected:
+  void SetUp() override {
+    q_.Enqueue(GetParam());
+  }
+
+  Queue<int> q_;
 };
 
-TYPED_TEST_SUITE_P(MyAbstractTest);
-```
-
-</Step>
-
-<Step title="Define the Type-Parameterized Tests">
-
-```cpp
-TYPED_TEST_P(MyAbstractTest, DoesThing) {
-  TypeParam val = TypeParam();
-  EXPECT_NE(val, TypeParam());
+TEST_P(QueueTest, DequeueReturnsEnqueuedValue) {
+  int* val = q_.Dequeue();
+  ASSERT_NE(val, nullptr);
+  EXPECT_EQ(*val, GetParam());
+  delete val;
 }
 
-TYPED_TEST_P(MyAbstractTest, HandlesInput) {
-  ...
+INSTANTIATE_TEST_SUITE_P(QueueTests, QueueTest, ::testing::Values(1, 2, 3, 4));
+```
+
+### Typed Test Example
+
+```cpp
+template <typename T>
+class StackTest : public ::testing::Test {
+ protected:
+  Stack<T> stack_;
+};
+
+using MyTypes = ::testing::Types<int, double, std::string>;
+TYPED_TEST_SUITE(StackTest, MyTypes);
+
+TYPED_TEST(StackTest, IsEmptyInitially) {
+  EXPECT_TRUE(this->stack_.IsEmpty());
+}
+
+TYPED_TEST(StackTest, PushAndPop) {
+  this->stack_.Push(TypeParam{});
+  EXPECT_FALSE(this->stack_.IsEmpty());
+  TypeParam val = this->stack_.Pop();
+  (void)val;  // Silence unused warning
 }
 ```
 
-</Step>
+---
 
-<Step title="Register Tests">
+## 7. Summary
 
-```cpp
-REGISTER_TYPED_TEST_SUITE_P(MyAbstractTest, DoesThing, HandlesInput);
-```
+By applying parameterized and (type-)parameterized tests, you enable significant test code reuse, comprehensive coverage across inputs and types, and better test organization. This makes your testing process more maintainable and scalable.
 
-</Step>
-
-<Step title="Instantiate with Specific Types">
-
-```cpp
-using MyTypes = ::testing::Types<int, double>;
-INSTANTIATE_TYPED_TEST_SUITE_P(MyInstantiation, MyAbstractTest, MyTypes);
-```
-
-</Step>
-</Steps>
-
-### 5.3 Notes
-
-- You can instantiate the same abstract tests multiple times with different types.
-- The tests’ names are prefixed by the instantiation name.
+Explore further in the [GoogleTest Primer](primer.md), the [Advanced Guide](advanced.md#value-parameterized-tests), and the [Testing Reference](reference/testing.md) for detailed API insights.
 
 ---
 
-## 6. Naming Parameterized Tests
+## 8. Additional Resources
 
-By default, GoogleTest appends the parameter index to the test names. For better clarity, especially when parameters are complex types, specify a **custom name generator**:
-
-- Use the built-in `testing::PrintToStringParamName` for simple printable types.
-- Write a lambda or functor taking `testing::TestParamInfo<T>` and returning a string.
-
-Example:
-
-```cpp
-INSTANTIATE_TEST_SUITE_P(
-  NamedTests, FooTest, testing::Values(1, 2, 3),
-  [](const testing::TestParamInfo<int>& info) {
-    return "Value_" + std::to_string(info.param);
-  });
-```
-
-Ensure your test names:
-
-- Are unique
-- Contain only ASCII alphanumeric characters or underscores
-- Do not use underscores in the test suite or test names themselves (see FAQ for rationale)
+- **Primer on GoogleTest Topics:** [docs/primer.md](primer.md)
+- **Advanced Guide on Parameterized Tests:** [docs/advanced.md#value-parameterized-tests](advanced.md#value-parameterized-tests)
+- **Testing Reference (Macros and APIs):** [docs/reference/testing.md](reference/testing.md)
+- **FAQ on Parameterized Tests:** [docs/faq.md#typed-vs-parameterized-tests](faq.md)
+- **Sample test files with parameterized tests:** [googletest/test/googletest-param-test-test.cc](googletest/test/googletest-param-test-test.cc)
 
 ---
-
-## 7. Practical Example: Combining Parameter Generators
-
-Test multiple combinations of parameters by using `Combine()` which generates Cartesian products of parameter sequences.
-
-Example:
-
-```cpp
-using ::testing::Bool;
-using ::testing::Combine;
-using ::testing::Values;
-
-class ComplexTest : public testing::TestWithParam<std::tuple<int, bool>> {};
-
-TEST_P(ComplexTest, TestAllCombinations) {
-  int i = std::get<0>(GetParam());
-  bool flag = std::get<1>(GetParam());
-  EXPECT_GE(i, 0);
-  if (flag) {
-    EXPECT_LT(i, 10);
-  }
-}
-
-INSTANTIATE_TEST_SUITE_P(
-    AllCombinations, ComplexTest,
-    Combine(Values(0, 1, 2), Bool()));
-```
-
-This will run 6 variations with all combinations of integer and boolean parameters.
-
----
-
-## 8. Troubleshooting and Tips
-
-- **Test names invalid or clashing:** Ensure generated test names conform to allowed characters. Avoid underscores in test and test suite names.
-- **Parameter types not printable:** Overload streaming operator (`<<`), or define `PrintTo()` to help GoogleTest print test parameters.
-- **Tests not instantiated:** If you forget to instantiate a parameterized test suite with `INSTANTIATE_TEST_SUITE_P`, tests won’t run. Use `GTEST_ALLOW_UNINSTANTIATED_PARAMETERIZED_TEST()` to suppress warnings if intentional.
-- **Complex parameter types:** When parameters are tuples or structs, consider a custom parameter name generator for clear test output.
-- **Lifetime management for pointers:** Raw pointer parameters require care managing lifetimes.
-
----
-
-## 9. Next Steps & Related Documentation
-
-- Explore further in the [Advanced Guide](docs/advanced.md#value-parameterized-tests) for detailed explanations and multiple examples.
-- Use [GoogleTest Primer](docs/primer.md) to cement foundational test writing skills.
-- Understand test suite lifecycle in [Test Structure & Lifecycle](docs/reference/testing.md#Test).
-- Once comfortable, evaluate using typed and type-parameterized tests for verifying interfaces and generic code.
-- Inspect source tests like [googletest-list-tests-unittest_.cc](https://github.com/google/googletest/blob/main/googletest/test/googletest-list-tests-unittest_.cc) for real-world examples.
-
----
-
-## 10. Summary
-
-Parameterized testing in GoogleTest empowers you to scale and generalize your tests elegantly. By defining test fixtures and using the appropriate macros (`TEST_P`, `TYPED_TEST`, `TYPED_TEST_P`) alongside instantiation macros, you cover many inputs and types effortlessly. This guide offers you the practical steps and options to do so effectively.
-
----
-
-For the latest reference and more examples, see the [Testing Reference – Parameterized & Typed Tests](https://github.com/google/googletest/blob/main/docs/reference/testing.md#parameterized--typed-tests).
-
-For any questions about naming conventions and test design, consult the [GoogleTest FAQ](https://github.com/google/googletest/blob/main/docs/faq.md#i-need-to-test-that-different-implementations-of-an-interface-satisfy-some-common-requirements-should-i-use-typed-tests-or-value-parameterized-tests).
-
-
----
-
-<Source url="https://github.com/google/googletest" branch="main" paths={[{"path":"googletest/include/gtest/gtest-param-test.h","range":"1-232"},{"path":"googletest/include/gtest/gtest-typed-test.h","range":"1-220"},{"path":"docs/advanced.md","range":"221-537"}]} />
